<resources>
    <string name="app_name">Math Trainer</string>
    <string name="tables">Multiplication Table</string>
    <string name="x1">x1</string>
    <string name="x2">x2</string>
    <string name="x3">x3</string>
    <string name="x4">x4</string>
    <string name="x5">x5</string>
    <string name="x6">x6</string>
    <string name="x7">x7</string>
    <string name="x8">x8</string>
    <string name="x9">x9</string>
    <string name="x10">x10</string>
    <string name="x11">x11</string>
    <string name="x12">x12</string>
    <string name="math_time">Math time!</string>
    <string name="equation">Equation</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="show_answer">Show Answer</string>
    <string name="check">Check</string>
    <string name="math_trainer">Math Trainer</string>
    <string name="answer">Answer:</string>
    <string name="math_up">Math up!</string>
    <string name="settings">Settings</string>
    <string name="level">Level:</string>
    <string name="multiplication">Multiplication:</string>
    <string name="x2_to_x100">x2 to x100</string>
    <string name="x2_to_x12">x2 to x12</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="clear_settings">Clear Settings</string>
</resources>
