<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="187dp"
        android:layout_height="51dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/math_trainer"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:layout_marginBottom="19dp"
        android:text="@string/math_up"
        app:layout_constraintBottom_toTopOf="@+id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:layout_marginBottom="121dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="211dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:srcCompat="@drawable/calculator" />

</androidx.constraintlayout.widget.ConstraintLayout>